--- a/package.json
+++ b/package.json
@@ -42,5 +42,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 10.0.0.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YogeshSolanki2/Swiggy.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/YogeshSolanki2/Swiggy/issues"
+  },
+  "homepage": "https://github.com/YogeshSolanki2/Swiggy#readme"
 }
